--- a/src/WebDeploy/Cake.WebDeploy.csproj
+++ b/src/WebDeploy/Cake.WebDeploy.csproj
@@ -50,12 +50,12 @@
   <ItemGroup>
     <Compile Include="Aliases\CakeAliases.cs" />
     <Compile Include="Deploy\WebDeployManager.cs" />
-    <Compile Include="Extensions\PublishSettingsExtensions.cs" />
+    <Compile Include="Extensions\DeploySettingsExtensions.cs" />
     <Compile Include="Interfaces\IWebDeployManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\SolutionInfo.cs" />
     <Compile Include="Settings\RemoteAgent.cs" />
-    <Compile Include="Settings\PublishSettings.cs" />
+    <Compile Include="Settings\DeploySettings.cs" />
     <Compile Include="Deploy\DeployUtils.cs" />
   </ItemGroup>
   <ItemGroup />
