--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,17 @@ services:
 
 # Install script
 install:
-    - cmd: powershell -NoProfile -ExecutionPolicy unrestricted -Command .\install.ps1
+    - ps: >-
+        #Install WebDeploy
+        choco install webdeploy
+
+        #Start Services
+        Start-Service W3SVC
+        Start-Service WMSVC
+        Start-Service msdepsvc
+
+        #Turn Firewall Off
+        netsh advfirewall set allprofiles state off
 
 # Build script
 build_script:
