--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ services:
 
 # Install script
 install:
-    - cmd: powershell -Verb runAs -NoProfile -ExecutionPolicy unrestricted -Command .\install.ps1
+    - cmd: powershell -NoProfile -ExecutionPolicy unrestricted -Command .\install.ps1
 
 # Build script
 build_script:
