--- a/src/WebDeploy/Cake.WebDeploy.csproj
+++ b/src/WebDeploy/Cake.WebDeploy.csproj
@@ -31,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Cake.Core, Version=0.5.5.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Cake.Core.0.5.5\lib\net45\Cake.Core.dll</HintPath>
+    <Reference Include="Cake.Core, Version=0.6.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Cake.Core.0.6.4\lib\net45\Cake.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Web.Deployment, Version=9.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -47,12 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Aliases\WebDeployAliases.cs" />
-    <Compile Include="Class1.cs" />
     <Compile Include="Deploy\DeployUtils.cs" />
     <Compile Include="Deploy\WebDeployManager.cs" />
     <Compile Include="Extensions\DeploySettingsExtensions.cs" />
     <Compile Include="Interfaces\IWebDeployManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Namespaces.cs" />
     <Compile Include="Properties\SolutionInfo.cs" />
     <Compile Include="Settings\DeploySettings.cs" />
     <Compile Include="Settings\RemoteAgent.cs" />
