--- a/src/WebDeploy/Cake.WebDeploy.csproj
+++ b/src/WebDeploy/Cake.WebDeploy.csproj
@@ -53,11 +53,13 @@
     <Compile Include="Deploy\WebDeployManager.cs" />
     <Compile Include="Extensions\DeploySettingsExtensions.cs" />
     <Compile Include="Interfaces\IWebDeployManager.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Namespaces.cs" />
-    <Compile Include="Properties\SolutionInfo.cs" />
     <Compile Include="Settings\DeploySettings.cs" />
     <Compile Include="Settings\RemoteAgent.cs" />
+	<Compile Include="Properties\Namespaces.cs" />
+	<Compile Include="Properties\AssemblyInfo.cs" />
+	<Compile Include="..\SolutionInfo.cs">
+      <Link>Properties\SolutionInfo.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
