--- a/src/WebDeploy/Cake.WebDeploy.csproj
+++ b/src/WebDeploy/Cake.WebDeploy.csproj
@@ -54,10 +54,11 @@
     <Compile Include="Extensions\DeploySettingsExtensions.cs" />
     <Compile Include="Interfaces\IWebDeployManager.cs" />
     <Compile Include="Settings\DeploySettings.cs" />
+    <Compile Include="Settings\SkipRule.cs" />
     <Compile Include="Settings\RemoteAgent.cs" />
-	<Compile Include="Properties\Namespaces.cs" />
-	<Compile Include="Properties\AssemblyInfo.cs" />
-	<Compile Include="..\SolutionInfo.cs">
+    <Compile Include="Properties\Namespaces.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
   </ItemGroup>
