--- a/nuspec/Cake.WebDeploy.nuspec
+++ b/nuspec/Cake.WebDeploy.nuspec
@@ -15,6 +15,10 @@
       <copyright>Copyright (c) Phillip Sharpe 2015</copyright>
       <releaseNotes>Initial Release</releaseNotes>
       <tags>Cake Script Build WebDeploy</tags>
+
+       <dependencies>
+           <dependency id="Cake.Core" version="0.11.0" />
+       </dependencies>
    </metadata>
 
    <files>
