--- a/src/Cake.WebDeploy/Cake.WebDeploy.csproj
+++ b/src/Cake.WebDeploy/Cake.WebDeploy.csproj
@@ -5,7 +5,7 @@
         <PackageId>Cake.WebDeploy</PackageId>
         <OutputType>Library</OutputType>
 
-        <TargetFrameworks>net461</TargetFrameworks>
+        <TargetFrameworks>net46;</TargetFrameworks>
 
         <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
         <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
@@ -15,7 +15,7 @@
     </PropertyGroup>
 
     <PropertyGroup>
-        <DocumentationFile>bin\Debug\net461\Cake.WebDeploy.xml</DocumentationFile>
+        <DocumentationFile>bin\Debug\net46\Cake.WebDeploy.xml</DocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
