--- a/nuspec/Cake.WebDeploy.nuspec
+++ b/nuspec/Cake.WebDeploy.nuspec
@@ -17,15 +17,16 @@
       <tags>Cake Script Build WebDeploy</tags>
 
        <dependencies>
-           <dependency id="Cake.Core" version="0.22.0" />
+           <dependency id="Cake.Core" version="0.26.0" />
        </dependencies>
    </metadata>
 
    <files>
-      <file src="net46/Microsoft.Web.Deployment.dll" target="lib/net46" />
-       
       <file src="net46/Cake.WebDeploy.dll" target="lib/net46" />
       <file src="net46/Cake.WebDeploy.xml" target="lib/net46" />
+      <file src="net46/Cake.WebDeploy.pdb" target="lib/net46" />
+	  
+      <file src="net46/Microsoft.Web.Deployment.dll" target="lib/net46" />
        
       <file src="LICENSE" />
    </files>
