Update to Cake.Core v0.29

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Misc folders
 [Bb]in/
+[Oo]bj/
 [Tt]emp/
 [Pp]ackages/
 *.sln.ide/
@@ -8,12 +9,6 @@
 build/results/
 tools/
 test/tools/
-node_modules/
-
-
-
-src/Cake.WebDeploy/obj/
-src/Cake.WebDeploy.Tests/obj/
 
 
 
@@ -30,6 +25,7 @@ src/Cake.WebDeploy.Tests/obj/
 
 # Build results
 [Dd]ebug/
+[Rr]elease/
 x64/
 *_i.c
 *_p.c
@@ -72,6 +68,8 @@ project.lock.json
 
 SolutionInfo.cs
 
+
+
 # NuGet Packages Directory
 src/packages/
 
@@ -80,7 +78,11 @@ src/TestResults/
 
 
 
+# Websites
+src/*/wwwroot/version.txt
+node_modules/
+
+
+
 # Windows
 Thumbs.db
-
-src/*/wwwroot/version.txt
