--- a/src/Cake.WebDeploy.Tests/Cake.WebDeploy.Tests.csproj
+++ b/src/Cake.WebDeploy.Tests/Cake.WebDeploy.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <AssemblyTitle>Cake.WebDeploy.Tests</AssemblyTitle>
         <AssemblyName>Cake.WebDeploy.Tests</AssemblyName>
@@ -19,15 +19,15 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Cake.Core" Version="0.26.0" />
-        <PackageReference Include="Cake.Testing" Version="0.26.0" />
+        <PackageReference Include="Cake.Core" Version="0.29.0" />
+        <PackageReference Include="Cake.Testing" Version="0.29.0" />
 
         <PackageReference Include="Microsoft.Web.Deployment" Version="3.6.0" />
 
-        <PackageReference Include="xunit" Version="2.2.0" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
-        <PackageReference Include="Shouldly" Version="2.8.3" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
-        <PackageReference Include="XunitXml.TestLogger" Version="1.0.3-pre-rtm" />
+        <PackageReference Include="xunit" Version="2.3.1" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+        <PackageReference Include="Shouldly" Version="3.0.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
+        <PackageReference Include="XunitXml.TestLogger" Version="2.0.0" />
     </ItemGroup>
 </Project>
