--- a/src/Cake.WebDeploy/Cake.WebDeploy.csproj
+++ b/src/Cake.WebDeploy/Cake.WebDeploy.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <AssemblyTitle>Cake.WebDeploy</AssemblyTitle>
         <AssemblyName>Cake.WebDeploy</AssemblyName>
@@ -19,7 +19,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Cake.Core" Version="0.26.0" />
+        <PackageReference Include="Cake.Core" Version="0.29.0" PrivateAssets="All" />
 
         <PackageReference Include="Microsoft.Web.Deployment" Version="3.6.0" />
     </ItemGroup>
