--- a/src/Cake.WebDeploy/Cake.WebDeploy.csproj
+++ b/src/Cake.WebDeploy/Cake.WebDeploy.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <AssemblyTitle>Cake.WebDeploy</AssemblyTitle>
         <AssemblyName>Cake.WebDeploy</AssemblyName>
         <PackageId>Cake.WebDeploy</PackageId>
         <OutputType>Library</OutputType>
 
-        <TargetFrameworks>net46;</TargetFrameworks>
+        <TargetFrameworks>netstandard2.0</TargetFrameworks>
 
         <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
         <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
