--- a/src/Cake.WebDeploy.Tests/Cake.WebDeploy.Tests.csproj
+++ b/src/Cake.WebDeploy.Tests/Cake.WebDeploy.Tests.csproj
@@ -19,15 +19,18 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Cake.Core" Version="0.33.0" />
-        <PackageReference Include="Cake.Testing" Version="0.33.0" />
+        <PackageReference Include="Cake.Core" Version="1.0.0" />
+        <PackageReference Include="Cake.Testing" Version="1.0.0" />
 
-        <PackageReference Include="Microsoft.Web.Deployment" Version="3.6.0" />
+        <PackageReference Include="Microsoft.Web.Deployment" Version="4.0.5" />
 
         <PackageReference Include="xunit" Version="2.4.1" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Shouldly" Version="3.0.2" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
-        <PackageReference Include="XunitXml.TestLogger" Version="2.1.26" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
+        <PackageReference Include="XunitXml.TestLogger" Version="3.0.62" />
     </ItemGroup>
 </Project>
