--- a/nuspec/Cake.WebDeploy.nuspec
+++ b/nuspec/Cake.WebDeploy.nuspec
@@ -16,16 +16,19 @@
       <releaseNotes>Initial Release</releaseNotes>
       <tags>Cake Script Build WebDeploy</tags>
 	  <dependencies>
-		  <group targetFramework=".NETFramework4.6">
+		  <group targetFramework=".NETFramework4.6.1">
 			  <dependency id="Microsoft.Web.Deployment" version="4.0.5" />
 		   </group>
 	   </dependencies>
    </metadata>
 
    <files>
-      <file src="net46/Cake.WebDeploy.dll" target="lib/net46" />
-      <file src="net46/Cake.WebDeploy.xml" target="lib/net46" />
-      <file src="net46/Cake.WebDeploy.pdb" target="lib/net46" />
+      <file src="net461/Cake.WebDeploy.dll" target="lib/net461" />
+      <file src="net461/Cake.WebDeploy.xml" target="lib/net461" />
+      <file src="net461/Cake.WebDeploy.pdb" target="lib/net461" />
+      <file src="net461/Microsoft.Web.Delegation.dll" target="lib/net461" />
+      <file src="net461/Microsoft.Web.Deployment.dll" target="lib/net461" />
+      <file src="net461/Microsoft.Web.Deployment.Tracing.dll" target="lib/net461" />
 
       <file src="LICENSE" />
    </files>
