--- a/nuspec/Cake.WebDeploy.nuspec
+++ b/nuspec/Cake.WebDeploy.nuspec
@@ -14,7 +14,7 @@
       <requireLicenseAcceptance>false</requireLicenseAcceptance>
       <copyright>Copyright (c) Phillip Sharpe 2015</copyright>
       <releaseNotes>Initial Release</releaseNotes>
-      <tags>Cake Script Build WebDeploy</tags>
+      <tags>Cake cake-addin Script Build WebDeploy</tags>
 	  <dependencies>
 		  <group targetFramework=".NETFramework4.6.1">
 			  <dependency id="Microsoft.Web.Deployment" version="4.0.5" />
